welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:7: error: Unmatched closing brace '}' ignored here
          }      
          ^